--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: FrontPage 2.0
+title: Justin Chen - GitBlog
 description: > # this means to ignore newlines until "baseurl:"
   Data Enthusiast, Pratical technophile. Ex Bloomberg.
 permalink: ':title/'
