--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: @jayteetk
+title: '@jayteetk'
 description: > # this means to ignore newlines until "baseurl:"
   Data Enthusiast, Pratical technophile. Ex Bloomberg. @jayteetk
 permalink: ':title/'
